TESTS: audio: execute feature test as part of check-devel
During development, the audio feature tests can be a helpful tool
to catch synthesis breakage. But as long as we have a few fragile
cases, distcheck and package builds of stable versions shouldn't
be affected.

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -21,7 +21,7 @@ BSE2WAV = $(strip						\
 
 # == audio feature test rule ==
 FEATURE_TESTS =
-check-local: $(FEATURE_TESTS)
+check-devel: $(FEATURE_TESTS)
 # feature test temporaries
 CLEANFILES += *.tmp *.wav
 
