DATA: include major and minor version in bse-X.Y.pc

--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,7 @@ BST_VERSION="$PACKAGE_VERSION"
 [BST_MAJOR_VERSION=`echo $PACKAGE_VERSION | sed 's/\([0-9]\+\)\.\([0-9]\+\)\.\([0-9]\+\)\(.*\)/\1/'`]
 [BST_MINOR_VERSION=`echo $PACKAGE_VERSION | sed 's/\([0-9]\+\)\.\([0-9]\+\)\.\([0-9]\+\)\(.*\)/\2/'`]
 [BST_MICRO_VERSION=`echo $PACKAGE_VERSION | sed 's/\([0-9]\+\)\.\([0-9]\+\)\.\([0-9]\+\)\(.*\)/\3/'`]
+[BST_VERSION_STEM="$BST_MAJOR_VERSION.$BST_MINOR_VERSION"]
 [BIN_VERSION=`echo $PACKAGE_VERSION | sed 's/\([0-9]\+\)\.\([0-9]\+\)\.\([0-9]\+\)\(.*\)/\1.\2.\3/'`]
 case "$BST_VERSION" in
 0.99.*)     BST_VERSION_HINT=BETA ;;
@@ -36,14 +37,15 @@ esac
 AC_DEFINE_UNQUOTED(BST_VERSION, "$BST_VERSION", [BEAST Version])
 AC_DEFINE_UNQUOTED(BIN_VERSION, "$BIN_VERSION", [Binary Version])
 AC_DEFINE_UNQUOTED(BST_VERSION_HINT, "$BST_VERSION_HINT", [Version classification])
-AC_SUBST(BST_VERSION)
-AC_SUBST(BST_MAJOR_VERSION)
-AC_SUBST(BST_MINOR_VERSION)
-AC_SUBST(BST_MICRO_VERSION)
-AC_SUBST(BIN_VERSION)
+AC_SUBST(BST_MAJOR_VERSION)	# 1
+AC_SUBST(BST_MINOR_VERSION)	# 2
+AC_SUBST(BST_MICRO_VERSION)	# 3
+AC_SUBST(BST_VERSION_STEM)	# 1.2
+AC_SUBST(BIN_VERSION)		# 1.2.3
+AC_SUBST(BST_VERSION)		# 1.2.3-rc4
 
 # compute libtool versions
-LT_RELEASE=$BST_MAJOR_VERSION.$BST_MINOR_VERSION
+LT_RELEASE=$BST_VERSION_STEM
 LT_CURRENT=$BST_MICRO_VERSION
 LT_REVISION=0
 LT_AGE=$BST_MICRO_VERSION
@@ -689,7 +691,6 @@ AC_SUBST(LDFLAGS)
 AC_CONFIG_FILES([
 Makefile
 data/Makefile
-data/bse.pc
 data/beast.applications
 sfi/Makefile
 sfi/tests/Makefile
