--- a/drivers/bse-portaudio/Makefile.am
+++ b/drivers/bse-portaudio/Makefile.am
@@ -1,4 +1,4 @@
-# BSE-PortAudio - Better Sound Engine PortAudio Driver Package
+# BEAST & BSE
 
 AM_CPPFLAGS += -I$(srcdir) -I$(top_builddir)
 DEFS        += @DEFINE__FILE_DIR__@ $(strip -DG_LOG_DOMAIN=\"BSE-PortAudio\")
