--- a/tests/filecheck/Makefile.am
+++ b/tests/filecheck/Makefile.am
@@ -1,4 +1,4 @@
-# beast/tests/filecheck
+# BEAST & BSE
 include $(top_srcdir)/Makefile.decl
 
 AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir)
