--- a/tools/scripts/Makefile.am
+++ b/tools/scripts/Makefile.am
@@ -1,6 +1,4 @@
-# Beast tools/scripts
-#
-## GNU Lesser General Public License version 2 or any later version.
+# BEAST & BSE
 include $(top_srcdir)/Makefile.decl
 
 EXTRA_DIST += $(strip \
