--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -1,4 +1,4 @@
-PROJECT_NAME		= "BEAST/BSE - Better Audio System and Sound Engine"
+PROJECT_NAME		= "BEAST - Free Software Audio Synthesizer and Tracker"
 #OUTPUT_DIRECTORY      = doxyhtml/
 GENERATE_LATEX		= NO
 GENERATE_MAN		= NO
