BSE: libtool >= 1.5.2 doesn't always set rpath, requiring ldconfig
Libtool 1.5.2 (released 2004-01-25), doesn't set RPATH for any
directories in the dynamic linker search path. So when installing
shared libraries into e.g. /usr/local/lib, ldconfig(8) needs to
be run on linux after installation. See also:
        https://wiki.debian.org/RpathIssue

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -159,6 +159,10 @@ GLIB_MKENUMS = glib-mkenums
 SFIDL = $(top_builddir)/sfi/sfidl
 SFIDL_INC = --nostdinc -I$(top_builddir) -I$(top_srcdir) -I$(srcdir)
 
+install-exec-ldconfig: # libtool >= 1.5.2 doesn't always set rpath, requiring ldconfig
+	test `id -u` != 0 -o ! -x /sbin/ldconfig || /sbin/ldconfig $(DESTDIR)$(libdir)
+install-exec-hook: install-exec-ldconfig
+
 #
 # rules to generate built sources
 #
