--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ addons:
       libcairo2-dev, libpango1.0-dev, python2.7-dev, libxml2-dev, libgdk-pixbuf2.0-dev, libreadline6-dev,
       # Rapicorn1509 dependencies
       cython, libcroco3-dev,
+      # Beast09 dependencies
+      libxml2-utils,
       # devel-mode dependencies
       intltool, autoconf-archive, bison, flex, pandoc, doxygen, graphviz, texlive-binaries, xvfb ]
 
