--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ install:
   - (cd ../rapicorn && ./autogen.sh && make && sudo make install)
 
 before_script:
+  - travis_retry sudo apt-get install -y guile-1.8-dev libgnomecanvas2-dev
   - git clean -f
   - ./autogen.sh
   - make V=1
