--- a/sfi/tests/Makefile.am
+++ b/sfi/tests/Makefile.am
@@ -7,7 +7,7 @@ AM_CXXFLAGS += $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
 noinst_PROGRAMS   = $(ALLTESTS)
 progs_nosfi_ldadd = $(RAPICORN_LIBS) $(SFI_LIBS) -lm
-progs_ldadd 	  = $(top_builddir)/sfi/libsfi.la $(RAPICORN_LIBS) $(SFI_LIBS) -lm
+progs_ldadd 	  = $(top_builddir)/sfi/libsfi-@MAJOR@.la $(RAPICORN_LIBS) $(SFI_LIBS) -lm
 SFIDL 		  = $(top_builddir)/sfi/sfidl
 
 # ring
