--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -6,7 +6,7 @@ DEFS        += @DEFINE__FILE_DIR__@ $(strip -DG_LOG_DOMAIN=\"BSE-ALSA\")
 AM_CXXFLAGS += $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
 # Plugin bsedevice-alsa
-driversdir          = $(pkglibdir)/drivers
+driversdir          = $(bselibdir)/drivers
 drivers_LTLIBRARIES = bsepcmdevice-alsa.la bsemididevice-alsa.la
 drivers_ldflags     = -avoid-version
 drivers_libs        = $(top_builddir)/bse/libbse-@MAJOR@.la $(BSE_LIBS) $(SFI_LIBS) $(RAPICORN_LIBS)
