--- a/plugins/freeverb/Makefile.am
+++ b/plugins/freeverb/Makefile.am
@@ -6,7 +6,7 @@ DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))
 AM_CXXFLAGS += $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
 # install plugins under:
-plugindir = $(pkglibdir)/plugins
+plugindir = $(bselibdir)/plugins
 
 freeverb_la_SOURCES = allpass.cpp comb.cpp revmodel.cpp bsefreeverbcpp.cpp bsefreeverb.cc
 freeverb_la_LDFLAGS = $(AM_LDFLAGS) -module -avoid-version
