--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -17,7 +17,7 @@ instrumentdir=@pkgdatadir@/instruments
 
 Name: Beast & Bse
 Description: Beast & Bse are an audio tracker and audio synthesis engine.
-Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0
+Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0 rapicorn-15
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lbse-@MAJOR@ @BSE_PC_LIBS@
 Cflags: -I${pkgincludedir} @BSE_PC_CFLAGS@
